# spotify-mcp-integration

./: .env.example  .firebaserc  .gitignore  AGENT_INTEGRATION.md  ARCHITECTURE.md  FIREBASE_DEPLOYMENT_GUIDE.md  FIREBASE_DEPLOYMENT_PLAN.md  FIREBASE_LOCAL_TESTING.md  FIREBASE_QUICKSTART.md  FUZZ_TEST_RESULTS.md  LOCAL_TESTING_GUIDE.md  MIGRATION_GUIDE.md  PERFORMANCE_TEST_RESULTS.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  TEMPORAL_INTEGRATION_SUMMARY.md  TEMPORAL_PLANNING_README.md  TEMPORAL_SCHEDULES_AND_MCP.md  TEMPORAL_SDK_INTEGRATION_GUIDE.md  TESTING.md  TEST_RESULTS.md  agent_executor.py  agent_spotify_demo.py  coverage.xml  docker-compose.yml  firebase.json  package-lock.json  package.json  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  run.sh  spotify_custom_client.py  spotify_test.sh  test_custom_client.py  test_debug.py  test_debug_stdio.py  test_mcp_communication.py  (+8 more)
.claude/: config.json
_deprecated/: README.md
activities/: ai_disambiguator.py  playlist_manager.py  spotify_search.py
api/: app.py  app_agent.py  models.py
config/: settings.py
docs/: API_REFERENCE.md  EXECUTION_MODES.md  FIREBASE_ARCHITECTURE.md  FIREBASE_DEPLOYMENT.md  ios-shortcuts-setup.md
executors/: __init__.py  standalone_executor.py
functions/: .env.example  .gitignore  README.md  main.py  requirements.txt
load_tests/: QUICKSTART.md  README.md  generate_raspberry_pi_report.py  heavy_load_locustfile.py  light_load_locustfile.py  locust_common.py  locustfile.py  medium_load_locustfile.py  run_load_tests.sh
mcp_client/: client.py
models/: data_models.py
(+94 files in other folders)
