[project]
name = "spotify-mcp-integration"
version = "0.1.0"
description = "Seamlessly sync songs from Apple Music to Spotify playlists using iOS Shortcuts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Temporal
    "temporalio>=1.8.0",

    # HTTP & API Clients
    "httpx>=0.28.0",
    "spotipy>=2.24.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # String Matching
    "rapidfuzz>=3.10.0",

    # AI & MCP
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "mcp>=1.0.0",
    "openai>=1.55.0",
    "anthropic>=0.39.0",
    "claude-agent-sdk>=0.1.0",

    # Monitoring
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
]
loadtest = [
    "locust>=2.32.0",
    "psutil>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "workflows", "activities", "mcp_server", "mcp_client", "workers", "models", "config"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
